--- a/views/brz_object_create.twig
+++ b/views/brz_object_create.twig
@@ -26,7 +26,7 @@
 				{# <option value="hyong">Hyong</option>
 				<option value="magnae">Magnae</option> #}
 				{% for type_bd in types_bd %}
-					<option value="{{ type_bd.name }}">{{ type_bd.name }}</option>
+					<option value="{{ type_bd.id }}">{{ type_bd.name }}</option>
 				{% endfor %}
 			</select>
 		</div>
